objects/LLC_BI__Sweep_Service__c.object
<CustomObject>
    <description>This object is ancillary with a one-to-one lookup with the Treasury object and is used to store fields specific to sweep services.</description>
    <fields>
        <fullName>Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>Parent 1</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services (Account 1)</relationshipLabel>
        <relationshipName>Sweep_Services3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>Parent 2</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services (Account 2)</relationshipLabel>
        <relationshipName>Sweep_Services4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent 3</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services (Account 3)</relationshipLabel>
        <relationshipName>Sweep_Services5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>Primary (Child Account)</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services (Account # (Parent))</relationshipLabel>
        <relationshipName>Sweep_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Account_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account 4</description>
        <label>Parent 4</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services (Account 4)</relationshipLabel>
        <relationshipName>Sweep_Services6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_From_Parent_4__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>From Sequence 4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From Parent 1</fullName>
                </value>
                <value>
                    <fullName>From Parent 2</fullName>
                </value>
                <value>
                    <fullName>From Parent 3</fullName>
                </value>
                <value>
                    <fullName>From Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Peg_Balance_1__c</fullName>
        <description>This field is used to store Peg Balance info.</description>
        <label>Peg Balance 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Peg_Balance_2__c</fullName>
        <description>This field is used to store Peg Balance info.</description>
        <label>Peg Balance 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Peg_Balance_3__c</fullName>
        <description>This field is used to store Peg Balance info.</description>
        <label>Peg Balance 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Peg_Balance__c</fullName>
        <description>This field is used to store Peg Balance info.</description>
        <label>Peg Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Primary_Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store deposit account number info.</description>
        <label>Primary (Child) Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services</relationshipLabel>
        <relationshipName>Sweep_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Secondary_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Secondary Deposit Account info.</description>
        <label>Secondary (Parent) Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Services (Secondary (Parent) Account)</relationshipLabel>
        <relationshipName>Sweep_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_To_Child_4__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>To Sequence 4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Parent 1</fullName>
                </value>
                <value>
                    <fullName>To Parent 2</fullName>
                </value>
                <value>
                    <fullName>To Parent 3</fullName>
                </value>
                <value>
                    <fullName>To Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Parent_1__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>From Sequence 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From Parent 1</fullName>
                </value>
                <value>
                    <fullName>From Parent 2</fullName>
                </value>
                <value>
                    <fullName>From Parent 3</fullName>
                </value>
                <value>
                    <fullName>From Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Parent_2__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>From Sequence 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From Parent 1</fullName>
                </value>
                <value>
                    <fullName>From Parent 2</fullName>
                </value>
                <value>
                    <fullName>From Parent 3</fullName>
                </value>
                <value>
                    <fullName>From Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Parent_3__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>From Sequence 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From Parent 1</fullName>
                </value>
                <value>
                    <fullName>From Parent 2</fullName>
                </value>
                <value>
                    <fullName>From Parent 3</fullName>
                </value>
                <value>
                    <fullName>From Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Repurchase_Sweep__c</fullName>
        <label>Repurchase Sweep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Public/ Nonprofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Sweep Services</relationshipLabel>
        <relationshipName>Sweep_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_tbd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_1_Loan_cm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent 1 (Loan)</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Sweep Services (Parent 1 (Loan))</relationshipLabel>
        <relationshipName>Sweep_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_2_Loan_cm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent 2 (Loan)</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Sweep Services (Parent 2 (Loan))</relationshipLabel>
        <relationshipName>Sweep_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_3_Loan_cm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent 3 (Loan)</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Sweep Services (Parent 3 (Loan))</relationshipLabel>
        <relationshipName>Sweep_Services3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Child_Loan_cm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary (Child Loan)</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Sweep Services</relationshipLabel>
        <relationshipName>Sweep_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Balance__c</fullName>
        <label>Target Balance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sweep in excess above</fullName>
                </value>
                <value>
                    <fullName>Target Balance Maintained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Child_1__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>To Sequence 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Parent 1</fullName>
                </value>
                <value>
                    <fullName>To Parent 2</fullName>
                </value>
                <value>
                    <fullName>To Parent 3</fullName>
                </value>
                <value>
                    <fullName>To Parent 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Child_2__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>To Sequence 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Parent 1</fullName>
                </value>
                <value>
                    <fullName>To Parent 2</fullName>
                </value>
                <value>
                    <fullName>To Parent 3</fullName>
                </value>
                <value>
                    <fullName>To Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Child_3__c</fullName>
        <description>Field Label has been updated as part of DF-01399</description>
        <label>To Sequence 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Parent 1</fullName>
                </value>
                <value>
                    <fullName>To Parent 2</fullName>
                </value>
                <value>
                    <fullName>To Parent 3</fullName>
                </value>
                <value>
                    <fullName>To Parent 4</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sweep Service</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Sweep Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sweep Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>